# ovn-kubernetes

./: .ci-operator.yaml  .gitignore  .travis.yml  ADOPTERS.md  CODEOWNERS  CONTRIBUTING.md  COPYING  Dockerfile  Dockerfile.base  Dockerfile.base.rhel9  Dockerfile.centos  Dockerfile.microshift  Dockerfile.microshift.rhel9  Dockerfile.rhel9  Dockerfile.utest  FAQ.md  MAINTAINERS.md  MEETINGS.md  OWNERS  README.daemonset.md  README.md  README_MANUAL.md  READMEquay.md  REVIEWING.md  SECURITY.md  community-meeting-info.md  crd-docs-config.yaml  foo.yaml  mkdocs.yml  netlify.toml  requirements.txt  setup.cfg  setup.py  tasks.md  test-requirements.txt  test.sh  tox.ini  user-defined-primary-networks-egress-l2.yaml  user-defined-primary-networks-egress-l3.yaml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  pr-labeler.yml  response
contrib/: .gitignore  README.md  dualstack.sh  exec.sh  generate_kind_yaml.sh  kind-common  kind-dual-stack-conversion.sh  kind-dualstack.md  kind-ha.yaml  kind-helm.sh  kind-multinode.yaml  kind.sh  kind.yaml  kind.yaml.j2  logs.sh  multus-daemonset.yml  ovn-kubernetes-cluster.yml
docs/: CNAME  INSTALL.K8S.md  INSTALL.KUBEADM.md  INSTALL.OPENSHIFT.md  INSTALL.SSL.md  INSTALL.UBUNTU.md  OVN-NORTHD.SSL.md  _config.yml  ci.md  config.md  debugging.md  developer.md  egress-firewall.md  egress-ip.md  egress-service.md  export_flows.md  ha.md  hybrid-overlay.md  index.md  kind-ipv6-dualstack.md  kind.md  metrics.md  mocks-ut-faq.md  multi-homing.md  multicast.md  network-policy.md  node-identity.md  nw_policies.md  ovn-k8s-overlay.1  ovn-kube-util.1  (+6 more)
(+2053 files in other folders)
