[metadata]
name = ovn-kubernetes
summary = OVN integration for Kubernetes
description-file = README.md
author = OVN
author-email = dev@openvswitch.org
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = ovn_k8s
scripts = 
    bin/ovn-k8s-cni-overlay.py
    bin/ovn-k8s-overlay.py
    bin/ovn-k8s-watcher.py
